--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -17,10 +17,13 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: oklch(21% .034 264.665);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.layout-margin {
+  margin-left: calc(var(--spacing) * 64);
 }
